objects/CAPA_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CAPA_ParentWorkFlowAction__c</fullName>
        <formula>CAPA__r.CMPL123_WF_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ParentWorkFlowAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPA Investigations</relationshipLabel>
        <relationshipName>CAPA_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_InvestigationcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CAPA Investigation</label>
    <nameField>
        <displayFormat>CAPA-INV-{00000}</displayFormat>
        <label>CAPA Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPA Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>CAPA_Complete_Review</fullName>
        <active>false</active>
        <description>To check whether the CAPA action is complete or not</description>
        <errorConditionFormula>CAPA__r.CMPL123_WF_Action__c  &lt;&gt; null &amp;&amp; CAPA__r.CMPL123_WF_Action__c != 'Submit for Review - CAPA'</errorConditionFormula>
        <errorMessage>You cannot add new Investigation under this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_CAPA</fullName>
        <active>true</active>
        <errorConditionFormula>CAPA__r.CMPL123_WF_Status__c =="Closed - CAPA"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
</CustomObject>